codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__actionable_banner_with_composer_gap.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: rendered
---
                                                                      
  Usage limit reached                                                 
                                                                      
› 1. View usage                                                       
                                                                      
  Press a number to choose · esc to dismiss · type to continue        
                                                                      
                                                                      
› Ask Ore to do anything                                              
                                                                      
  esc esc to edit previous message
